--- a/index.html
+++ b/index.html
@@ -3,104 +3,126 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>D S Albin | Mechanical Engineer</title>
+    <title>Albin D S | Mechanical Engineer Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <!-- Background Animation Canvas -->
+    <!-- Background Animation -->
     <canvas id="bgCanvas"></canvas>
 
-    <!-- Main Content -->
     <div class="content">
 
         <!-- HERO -->
         <section class="section hero">
-            <h1>D S Albin</h1>
-            <h2>Mechanical Engineering Student</h2>
-            <p>
-                Final-year Mechanical Engineering student with strong interest in design and manufacturing,
-                skilled in AutoCAD, SolidWorks and practical production experience.
-            </p>
-            <p>📞 6385537992 | ✉ albin132005@gmail.com</p>
+            <h1>ALBIN D S</h1>
+            <h2>Mechanical Engineering Student | CAD • CAM • Manufacturing</h2>
+            <p>Kanyakumari | 6385537992 | albin132005@gmail.com</p>
         </section>
 
 
-        <!-- ABOUT -->
+        <!-- OBJECTIVE -->
         <section class="section">
-            <h3>About Me</h3>
+            <h3>Objective</h3>
             <p>
-                I am a final-year Mechanical Engineering student passionate about design, manufacturing,
-                and real-world problem solving. I aim to apply my technical knowledge to industrial projects
-                and grow as a professional engineer.
+                Mechanical Engineering student with a strong foundation in engineering principles and practical
+                problem-solving. Proficient in CAD/CAM tools such as AutoCAD and SolidWorks with hands-on
+                knowledge of CNC programming and machining operations. A hardworking and quick-learning
+                individual eager to apply technical skills in real-world engineering applications.
             </p>
-        </section>
-
-
-        <!-- EDUCATION -->
-        <section class="section">
-            <h3>Education</h3>
-            <ul>
-                <li><b>B.E Mechanical Engineering</b> – Thanthai Periyar Government Institute of Technology, Vellore – CGPA 7.8</li>
-                <li><b>HSLC</b> – 76.3%</li>
-                <li><b>SSLC</b> – 84.6%</li>
-            </ul>
         </section>
 
 
         <!-- SKILLS -->
         <section class="section">
             <h3>Skills</h3>
+
             <div class="skills">
                 <span>AutoCAD</span>
                 <span>SolidWorks</span>
-                <span>MS Office</span>
+                <span>CNC Programming</span>
+                <span>Microsoft Office</span>
                 <span>Problem Solving</span>
-                <span>Team Management</span>
-                <span>Communication (Tamil & English)</span>
+                <span>Leadership</span>
+                <span>Teamwork</span>
+                <span>Communication</span>
+                <span>Tamil</span>
+                <span>English</span>
+                <span>Hindi</span>
             </div>
+        </section>
+
+
+        <!-- EXPERIENCE -->
+        <section class="section">
+            <h3>Internship Experience</h3>
+
+            <ul>
+                <li>
+                    <b>Bharat Heavy Electricals Limited (BHEL), Trichy</b><br>
+                    Boiler fabrication and assembly, welding, material handling, quality inspection,
+                    and industrial safety practices.
+                </li>
+
+                <li>
+                    <b>On Load Gears, Chennai</b><br>
+                    Tap changer assembly and mechanical fabrication with exposure to transformer
+                    components and production processes.
+                </li>
+            </ul>
+        </section>
+
+
+        <!-- EDUCATION -->
+        <section class="section">
+            <h3>Education</h3>
+
+            <ul>
+                <li><b>B.E. (Honors) Mechanical Engineering</b> – Thanthai Periyar Government Institute of Technology, Vellore</li>
+                <li><b>HVAC Design Certification</b> – ISHRAE Knowledge Centre, Chennai</li>
+                <li><b>SSLC & HSLC</b> – Government Higher Secondary School, Ezhudesapattu</li>
+            </ul>
         </section>
 
 
         <!-- PROJECTS -->
         <section class="section">
             <h3>Projects</h3>
-            <ul>
-                <li><b>Lattice Structure Based Prosthetic J-Shape Leg</b> – Generative design + Additive Manufacturing</li>
-                <li><b>Flame Detection Device</b> – UV/IR based fire sensing alarm system</li>
-            </ul>
-        </section>
 
-
-        <!-- EXPERIENCE -->
-        <section class="section">
-            <h3>Internships & Experience</h3>
             <ul>
-                <li><b>On Load Gears</b> – Tap changer assembly & mechanical production</li>
-                <li><b>Bharat Heavy Electricals Limited (BHEL), Trichy</b> – Boiler fabrication, welding, inspection & safety</li>
+                <li><b>J-Shape Prosthetic Leg</b> – Lightweight assistive prosthetic design using mechanical optimization</li>
+                <li><b>Earth Leakage Detection System</b> – Electrical safety monitoring device</li>
+                <li><b>Flame Detection System with IoT</b> – Fire sensing and alert system using sensors and connectivity</li>
             </ul>
         </section>
 
 
         <!-- WORKSHOPS -->
         <section class="section">
-            <h3>Workshops</h3>
+            <h3>Workshops & Training</h3>
+
             <ul>
-                <li>Additive Manufacturing for Future – AM2030 (VIT)</li>
-                <li>Product Design & Development</li>
-                <li>AI & ML in Hydrogen–Material Interaction</li>
+                <li>Additive Manufacturing for Future – AM2030</li>
+                <li>Product Design and Development</li>
+                <li>AI & ML – Hydrogen Material Interaction and Laser Innovations</li>
             </ul>
         </section>
 
 
-        <!-- FOOTER -->
+        <!-- CONTACT -->
         <section class="section footer">
-            <p>© 2026 D S Albin | Mechanical Engineering Portfolio</p>
+            <h3>Contact</h3>
+            <p>📞 6385537992</p>
+            <p>✉ albin132005@gmail.com</p>
+            <p>📍 Kanyakumari, Tamil Nadu</p>
+            <br>
+            <p>© 2026 Albin D S | Mechanical Engineering Portfolio</p>
         </section>
 
     </div>
 
     <script src="script.js"></script>
+
 </body>
 </html>
